--- a/index.html
+++ b/index.html
@@ -76,14 +76,41 @@
           <div class="widget-col2">
           </div>
         </div>
-            <div class="vertical-wid">
 
-            </div>
-            <div class="vertical-wid">
+        <div class="vertical-block">
+          <div class="vertical-wid lf">
 
-            </div>
-            <div class="vertical-wid">
           </div>
+          <div class="vertical-wid central">
+
+          </div>
+          <div class="vertical-wid rt">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row refernce-row">
+        <div class="description-reference">
+
+        </div>
+        <div class="reference">
+
+        </div>
+      </div>
+      <div class="sponsor-container">
+        <div class="counter">
+
+        </div>
+        <div class="sponsor">
+
+        </div>
+        <div class="start">
+
+        </div>
+        <div class="girl-pic">
+          
+        </div>
       </div>
     </main>
 
