--- a/index.html
+++ b/index.html
@@ -109,13 +109,29 @@
 
         </div>
         <div class="girl-pic">
-          
+
         </div>
       </div>
     </main>
 
     <footer>
+      <div class="footer-container">
+        <div class="menu-footer mfl">
 
+        </div>
+        <div class="menu-footer">
+
+        </div>
+        <div class="menu-footer">
+
+        </div>
+        <div class="menu-footer mfr">
+
+        </div>
+        <div class="credits-copy">
+
+        </div>
+      </div>
     </footer>
   </body>
 </html>
