--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Hubspot</title>
   </head>
@@ -10,27 +12,51 @@
 
       <div class="row rowhead-1">
         <div class="col1">
-          <div class="nav left">
-
+          <div class="nav-left">
+            <i class="fa fa-globe" aria-hidden="true"></i>
+            <select name="language" id="language">
+              <option value="english">English</option>
+              <option value="espanol">Espanol</option>
+              <option value="italiano">Italiano</option>
+            </select>
+            <span class="text-header">&#65372;</span>
+            <span class="text-header">Contact Us</span>
           </div>
         </div>
 
         <div class="col2">
-          <div class="nav right">
+          <div class="nav-right">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <button class="button login">Log In</button>
+            <button class="button getforfree">GetHubspotFree</button>
           </div>
         </div>
-
       </div>
 
       <div class="row rowhead-2">
         <div class="col1">
           <div class="logo left">
-
+            <img src="img/logo-hub.png" alt="logo">
           </div>
         </div>
 
         <div class="col2">
-          <div class="menu right">
+          <div class="nav-right">
+            <select name="software">
+              <option value="software">Software</option>
+            </select>
+            <select name="pricing">
+              <option value="pricing">Pricing</option>
+            </select>
+            <select name="resources">
+              <option value="resources">Resources</option>
+            </select>
+            <select name="partners">
+              <option value="partners">Parters</option>
+            </select>
+            <select name="about">
+              <option value="about">About</option>
+            </select>
           </div>
         </div>
       </div>
@@ -41,10 +67,10 @@
       <div class="row mainrow">
         <div class="col1">
           <div class="title">
-
+            <span class="main-title">There's a better way to grow.</span>
           </div>
           <div class="subtitle">
-
+            <span>Marketing,sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer"</span>
           </div>
           <div class="trial">
 
@@ -77,7 +103,7 @@
           </div>
         </div>
 
-        <div class="vertical-block">
+        <div class="vertical-row">
           <div class="vertical-wid lf">
 
           </div>
