--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <span>Marketing,sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer"</span>
           </div>
           <div class="trial">
-
+            <button class="getforfree-2">GetHubspotFree</button>
           </div>
           <div class="subscript">
-
+            <span>Get started with FREE tools, and upgrade as you grow.</span>
           </div>
         </div>
 
@@ -89,15 +89,20 @@
       <div class="row separtion-row">
 
       </div>
+
       <div class="content-container">
         <div class="head-img">
+          <img src="img/rubrick.png" alt="">
         </div>
         <div class="description-text">
-          <h2>BlaBlaBlaBlaBla</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h2>Powerful Alone. Better Together</h2>
+          <p>Hubspot offers a fullstack of softwarefor marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
         </div>
         <div class="widget">
           <div class="widget-col1">
+            <div class="wid-row">
+
+            </div>
           </div>
           <div class="widget-col2">
           </div>
