--- a/index.html
+++ b/index.html
@@ -99,11 +99,15 @@
           <p>Hubspot offers a fullstack of softwarefor marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
         </div>
         <div class="widget">
-          <div class="widget-col1">
-            <div class="wid-row">
 
+          <div class="widget-col1">
+
+            <div class="wid-row">
+              <img src="img/hubspot-book.png" alt="">
             </div>
+            <button class="learnmore">Learn More</button>
           </div>
+
           <div class="widget-col2">
           </div>
         </div>
