--- a/index.html
+++ b/index.html
@@ -102,24 +102,71 @@
 
           <div class="widget-col1">
 
-            <div class="wid-row">
+            <div class="imgwid-row">
               <img src="img/hubspot-book.png" alt="">
             </div>
-            <button class="learnmore">Learn More</button>
+            <button class="learnmore horziontal-wid">Learn More</button>
           </div>
-
+<!-- AGGIUNGERE HR E METTERE A POSTO PADDING DELLA PRIMA CHECK-CIRCLE  -->
           <div class="widget-col2">
+            <h3>Free HubSpot CRM</h3>
+            <p>Everything you need to organize, track and bulid better relationships with leads and customers, Yes, it's 100% free. Forever.</p>
+            <h4>POPOLAR FEATURE</h4>
+            <i class="fa fa-check-circle" aria-hidden="true"></i> Contact insight <i class="fa fa-check-circle" aria-hidden="true"></i> Deals <i class="fa fa-check-circle" aria-hidden="true"></i> Task
           </div>
         </div>
 
         <div class="vertical-row">
           <div class="vertical-wid lf">
-
+            <div class="wid-row">
+              <div class="img-marketing">
+                <img src="img/bookbubble.png">
+              </div>
+              <h4>Marketing Hub</h4>
+              <div class="mark-hub">
+                Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+              </div>
+              <hr>
+              <h5>POPOLAR FEATURE</h5>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
+              <button class="learnmore button-vertical">Learn More</button>
+            </div>
           </div>
           <div class="vertical-wid central">
-
+            <div class="wid-row">
+              <div class="img-marketing">
+                <img src="img/bookbubble.png">
+              </div>
+              <h4>Marketing Hub</h4>
+              <div class="mark-hub">
+                Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+              </div>
+              <hr>
+              <h5>POPOLAR FEATURE</h5>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
+              <button class="learnmore button-vertical">Learn More</button>
+            </div>
           </div>
           <div class="vertical-wid rt">
+            <div class="wid-row">
+              <div class="img-marketing">
+                <img src="img/bookbubble.png">
+              </div>
+              <h4>Marketing Hub</h4>
+              <div class="mark-hub">
+                Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+              </div>
+              <hr>
+              <h5>POPOLAR FEATURE</h5>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
+              <button class="learnmore button-vertical">Learn More</button>
+            </div>
           </div>
         </div>
 
@@ -127,7 +174,8 @@
 
       <div class="row refernce-row">
         <div class="description-reference">
-
+          <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
+          <span>You don't have to go it alone. Master the inbound methodology and gaet the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pos just like you.</span>
         </div>
         <div class="reference">
 
@@ -135,7 +183,10 @@
       </div>
       <div class="sponsor-container">
         <div class="counter">
-
+          <h1>64,500</h1>
+          <div>
+            customers in over <strong>100</strong> countries growing their businesses with HubSpot
+          </div>
         </div>
         <div class="sponsor">
 
