cambiate grandezze in assoluto

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
         <div class="col2">
-
+          <img src="img/main.png" alt="">
         </div>
       </div>
 
@@ -105,9 +105,12 @@
             <div class="imgwid-row">
               <img src="img/hubspot-book.png" alt="">
             </div>
-            <button class="learnmore horziontal-wid">Learn More</button>
+            <div class="horziontal-wid">
+              <button class="learnmore">Learn More</button>
+            </div>
+
           </div>
-<!-- AGGIUNGERE HR E METTERE A POSTO PADDING DELLA PRIMA CHECK-CIRCLE  -->
+          <!-- AGGIUNGERE HR E METTERE A POSTO PADDING DELLA PRIMA CHECK-CIRCLE  -->
           <div class="widget-col2">
             <h3>Free HubSpot CRM</h3>
             <p>Everything you need to organize, track and bulid better relationships with leads and customers, Yes, it's 100% free. Forever.</p>
@@ -115,7 +118,6 @@
             <i class="fa fa-check-circle" aria-hidden="true"></i> Contact insight <i class="fa fa-check-circle" aria-hidden="true"></i> Deals <i class="fa fa-check-circle" aria-hidden="true"></i> Task
           </div>
         </div>
-
         <div class="vertical-row">
           <div class="vertical-wid lf">
             <div class="wid-row">
@@ -131,7 +133,9 @@
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
-              <button class="learnmore button-vertical">Learn More</button>
+              <div class="horziontal-wid button-vertical">
+                <button class="learnmore">Learn More</button>
+              </div>
             </div>
           </div>
           <div class="vertical-wid central">
@@ -148,7 +152,10 @@
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
-              <button class="learnmore button-vertical">Learn More</button>
+              <div class="horziontal-wid button-vertical">
+                <button class="learnmore">Learn More</button>
+              </div>
+
             </div>
           </div>
           <div class="vertical-wid rt">
@@ -165,22 +172,24 @@
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
-              <button class="learnmore button-vertical">Learn More</button>
+              <div class="horziontal-wid button-vertical">
+                <button class="learnmore">Learn More</button>
+              </div>
             </div>
           </div>
         </div>
-
       </div>
 
       <div class="row refernce-row">
         <div class="description-reference">
-          <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
-          <span>You don't have to go it alone. Master the inbound methodology and gaet the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pos just like you.</span>
-        </div>
+        <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
+        <span>You don't have to go it alone. Master the inbound methodology and gaet the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pos just like you.</span>
+      </div>
         <div class="reference">
 
         </div>
       </div>
+
       <div class="sponsor-container">
         <div class="counter">
           <h1>64,500</h1>
@@ -189,12 +198,19 @@
           </div>
         </div>
         <div class="sponsor">
-
+          <img src="img/sponsor.png" alt="">
         </div>
+        <br>
         <div class="start">
-
+          <h2>Start Growing With HubSpot Today</h2>
+          <div>With tools to make every part of your process more human and support team excited to help you, getting started with inbound has never been easier.</div>
+          <button class="getforfree-2">GetHubspotFree</button>
+          <span>Get started with FREE tools, or get more with our premium software.</span>
         </div>
         <div class="girl-pic">
+          <div class="girl-img">
+            <img src="img/girl.png" alt="">
+          </div>
 
         </div>
       </div>
