--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-
+      <!-- Prima riga header - colonna sx -->
       <div class="row rowhead-1">
         <div class="col1">
           <div class="nav-left">
@@ -23,7 +23,7 @@
             <span class="text-header">Contact Us</span>
           </div>
         </div>
-
+        <!-- Prima riga header - colonna dx -->
         <div class="col2">
           <div class="nav-right">
             <i class="fa fa-search" aria-hidden="true"></i>
@@ -32,14 +32,14 @@
           </div>
         </div>
       </div>
-
+      <!-- Seconda riga header - logo dx -->
       <div class="row rowhead-2">
         <div class="col1">
           <div class="logo left">
             <img src="img/logo-hub.png" alt="logo">
           </div>
         </div>
-
+        <!-- Seconda riga header - Menu di navigazione -->
         <div class="col2">
           <div class="nav-right">
             <select name="software">
@@ -64,7 +64,9 @@
     </header>
 
     <main>
+      <!-- Jumbotron -->
       <div class="row mainrow">
+        <!-- Colonna dx - maintitle -->
         <div class="col1">
           <div class="title">
             <span class="main-title">There's a better way to grow.</span>
@@ -80,16 +82,19 @@
           </div>
         </div>
 
-
+        <!-- Background jumbotron colonna sx -->
         <div class="col2">
-          <img src="img/main.png" alt="">
+
         </div>
       </div>
 
+      <!-- Riga tiffany -->
       <div class="row separtion-row">
 
       </div>
 
+      <!-- Contenuto del sito -->
+      <!-- Cubo con titolo -->
       <div class="content-container">
         <div class="head-img">
           <img src="img/rubrick.png" alt="">
@@ -98,6 +103,8 @@
           <h2>Powerful Alone. Better Together</h2>
           <p>Hubspot offers a fullstack of softwarefor marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
         </div>
+
+        <!-- widget orrizzontale -->
         <div class="widget">
 
           <div class="widget-col1">
@@ -115,21 +122,26 @@
             <h3>Free HubSpot CRM</h3>
             <p>Everything you need to organize, track and bulid better relationships with leads and customers, Yes, it's 100% free. Forever.</p>
             <h4>POPOLAR FEATURE</h4>
+            <br>
             <i class="fa fa-check-circle" aria-hidden="true"></i> Contact insight <i class="fa fa-check-circle" aria-hidden="true"></i> Deals <i class="fa fa-check-circle" aria-hidden="true"></i> Task
           </div>
         </div>
+
+        <!-- widget verticali -->
         <div class="vertical-row">
           <div class="vertical-wid lf">
             <div class="wid-row">
               <div class="img-marketing">
-                <img src="img/bookbubble.png">
+                <img src="img_2\Marketing-Hub-Free.svg">
               </div>
               <h4>Marketing Hub</h4>
               <div class="mark-hub">
                 Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
               </div>
-              <hr>
-              <h5>POPOLAR FEATURE</h5>
+              <div class="rule">
+
+              </div>
+              <h4>POPOLAR FEATURE</h4>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
               <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
@@ -141,17 +153,19 @@
           <div class="vertical-wid central">
             <div class="wid-row">
               <div class="img-marketing">
-                <img src="img/bookbubble.png">
+                <img src="img_2\Sales-Professional-Illustration.svg">
               </div>
-              <h4>Marketing Hub</h4>
+              <h4>Sales Hub</h4>
               <div class="mark-hub">
-                Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+                Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
               </div>
-              <hr>
-              <h5>POPOLAR FEATURE</h5>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
+              <div class="rule">
+
+              </div>
+              <h4>POPOLAR FEATURE</h4>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Email tracking</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Meeting Scheduling</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Email Automation</div>
               <div class="horziontal-wid button-vertical">
                 <button class="learnmore">Learn More</button>
               </div>
@@ -161,17 +175,19 @@
           <div class="vertical-wid rt">
             <div class="wid-row">
               <div class="img-marketing">
-                <img src="img/bookbubble.png">
+                <img src="img_2\Service-Hub-Illustration.svg">
               </div>
-              <h4>Marketing Hub</h4>
+              <h4>Service Hub</h4>
               <div class="mark-hub">
-                Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.
+                Customer service software to help you connect with customers, exceed expectation, and turn them into promoters that grow your business.
               </div>
-              <hr>
-              <h5>POPOLAR FEATURE</h5>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Lead Generation</div>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Marketing Generation</div>
-              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Analytics</div>
+              <div class="rule">
+
+              </div>
+              <h4>POPOLAR FEATURE</h4>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Tickets</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i> Customer Feedback</div>
+              <div class="list"><i class="fa fa-check-circle" aria-hidden="true"></i>Knowledge Base</div>
               <div class="horziontal-wid button-vertical">
                 <button class="learnmore">Learn More</button>
               </div>
@@ -180,16 +196,74 @@
         </div>
       </div>
 
+      <!-- numeri servizi offerti -->
       <div class="row refernce-row">
         <div class="description-reference">
         <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
         <span>You don't have to go it alone. Master the inbound methodology and gaet the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pos just like you.</span>
       </div>
         <div class="reference">
+          <div class="clients bott-wh rh-wh">
+            <img src="img_2\homepage_community_agency.svg" alt="">
+            <div class="numbers">
+              <h1>150+</h1>
+              <span>HubSpot user groups</span>
+            </div>
+          </div>
+          <div class="clients bott-wh rh-wh">
+            <img src="img_2\homepage_community_blog.svg" alt="">
+            <div class="numbers">
+              <h1>4.5M+</h1>
+              <span>Monthly visits</span>
+            </div>
+          </div>
+          <div class="clients bott-wh rh-wh">
+            <img src="img_2\homepage_community_academy.svg" alt="">
+            <div class="numbers">
+              <h1>155K+</h1>
+              <span>Certified professionals</span>
+            </div>
+          </div>
+          <div class="clients bott-wh">
+            <img src="img_2\homepage_community_inbound.svg" alt="">
+            <div class="numbers">
+              <h1>21K+</h1>
+              <span>Registered attendees</span>
+            </div>
+          </div>
+          <div class="clients rh-wh">
+            <img src="img_2\homepage_community_connect.svg" alt="">
+            <div class="numbers">
+              <h1>200+</h1>
+              <span>Integration</span>
+            </div>
+          </div>
+          <div class="clients rh-wh">
+            <img src="img_2\homepage_community_globe.svg" alt="">
+            <div class="numbers">
+              <h1>6+</h1>
+              <span>languages</span>
+            </div>
+          </div>
+          <div class="clients rh-wh">
+            <img src="img_2\homepage_community_followers.svg" alt="">
+            <div class="numbers">
+              <h1>2.6M+</h1>
+              <span>Social followers</span>
+            </div>
+          </div>
+          <div class="clients">
+            <img src="img_2\growthhub-white-small-1.svg" alt="">
+            <div class="numbers">
+              <h1>5K+</h1>
+              <span>Profiles and counting</span>
+            </div>
+          </div>
 
         </div>
       </div>
 
+      <!-- sponsor -->
       <div class="sponsor-container">
         <div class="counter">
           <h1>64,500</h1>
@@ -218,20 +292,86 @@
 
     <footer>
       <div class="footer-container">
-        <div class="menu-footer mfl">
 
+        <!-- Menu di navigazione del footer -->
+        <div class="main-footer">
+          <div class="menu-footer">
+            <h5>Increase Your Traffic</h5>
+            <ul>
+              <li><a href="#">Ad Software</a></li>
+              <li><a href="#">Blog Software</a></li>
+              <li><a href="#">SEO Software</a></li>
+              <li><a href="#">Social Media Software</a></li>
+              <li><a href="#">Content Managment System</a></li>
+            </ul>
+          </div>
+          <div class="menu-footer">
+            <h5>Connect With Leads</h5>
+            <ul>
+              <li><a href="#">Find New Prospect</a></li>
+              <li><a href="#">Email Tracking</a></li>
+              <li><a href="#">Sales Email Templates</a></li>
+              <li><a href="#">Click to Call Your Leads</a></li>
+              <li><a href="#">Email Marketing</a></li>
+            </ul>
+          </div>
+          <div class="menu-footer">
+            <h5>Close and Manage Leads</h5>
+            <ul>
+              <li><a href="#">Document Tracking Tool</a></li>
+              <li><a href="#">Meeting Schedule Tool</a></li>
+              <li><a href="#">Sales Automation Tool</a></li>
+              <li><a href="#">Lead Managment Tool</a></li>
+              <li><a href="#">Pipeline Managment Tool</a></li>
+            </ul>
+          </div>
+          <div class="menu-footer">
+            <h5>Support and Tools</h5>
+            <ul>
+              <li><a href="#">HubSpot Partners</a></li>
+              <li><a href="#">Join a Local User Group</a></li>
+              <li><a href="#">Get a Free Website Report</a></li>
+              <li><a href="#">HubSpot Templates</a></li>
+              <li><a href="#">Free Tools &amp; Generators</a></li>
+            </ul>
+            <button class="button-footer" type="button" name="button">Contact HubSpot Support</button>
+            <br>
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+          </div>
         </div>
-        <div class="menu-footer">
 
-        </div>
-        <div class="menu-footer">
-
-        </div>
-        <div class="menu-footer mfr">
-
-        </div>
+        <!-- credits e copyright -->
         <div class="credits-copy">
+          <div class="lang-footer">
+            <ul>
+              <li>English</li>
+              <li>Deutsch</li>
+              <li>Espanol</li>
+              <li>Francais</li>
+              <li>Portugés</li>
+            </ul>
+            <hr>
+            <div class="row rowhead-1 inherit">
+              <div class="col1 nomargin">
+                <div class="nav-left">
+                  <img src="img_2/HSLogo_gray.svg" alt="">
+                  <br>
+                  <span>Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2020 HubSpot, Inc.</span>
+                </div>
+              </div>
 
+              <div class="col2 nomargin">
+                <div class="nav-right">
+                  <span class="legal">Legal Stuff</span>
+                  <span class="legal">Privacy Policy</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
